[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemigos/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/SpitFlyingEnemy.gd" type="Script" id=5]
[ext_resource path="res://Enemigos/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shaders/Blink.shader" type="Shader" id=8]
[ext_resource path="res://Shaders/ObjectFloating.shader" type="Shader" id=9]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/onoff = 1.0
shader_param/intensity = 3.0

[sub_resource type="Animation" id=2]
resource_name = "BlinkSpitFlyingEnemy"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "StopBlinkSpitFlyingEnemy"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[node name="SpitFlyingEnemy" type="KinematicBody2D"]
collision_layer = 2147483664
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 4

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/BlinkSpitFlyingEnemy = SubResource( 2 )
anims/StopBlinkSpitFlyingEnemy = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 300.0
bus = "Sonido"

[node name="TimerSonido" type="Timer" parent="."]
one_shot = true

[node name="SpitZone" parent="." instance=ExtResource( 1 )]

[node name="PositionSpit" type="Position2D" parent="."]

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="TimerSonido" to="." method="_on_TimerSonido_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
